cs3300/lab/1/A1.output
Grammar

    0 $accept: goal $end

    1 goal: MacroDefStar MainClass TypeDecStar

    2 MainClass: CLASS Identifier LEFT_CURL_BRAC TypeIdStar PUBLIC STATIC VOID MAIN LEFT_BRAC STRING LEFT_SQR_BRAC RIGHT_SQR_BRAC Identifier RIGHT_BRAC LEFT_CURL_BRAC SYS_OUT_PRINTLN LEFT_BRAC Expr RIGHT_BRAC SEMICOLON RIGHT_CURL_BRAC RIGHT_CURL_BRAC

    3 TypeDecStar: %empty
    4            | TypeDec TypeDecStar

    5 TypeDec: CLASS Identifier LEFT_CURL_BRAC TypeIdStar MethodStar RIGHT_CURL_BRAC
    6        | CLASS Identifier EXTENDS Identifier LEFT_CURL_BRAC TypeIdStar MethodStar RIGHT_CURL_BRAC

    7 MethodStar: %empty
    8           | MethodDec MethodStar

    9 MethodDec: PUBLIC Type Identifier LEFT_BRAC ArgList RIGHT_BRAC LEFT_CURL_BRAC TypeIdStar StmtStar RETURN Expr SEMICOLON RIGHT_CURL_BRAC

   10 TypeIdStar: %empty
   11           | TypeIdStar Type Identifier SEMICOLON

   12 Type: INT
   13     | INT_ARRAY
   14     | INT LEFT_SQR_BRAC RIGHT_SQR_BRAC
   15     | BOOLEAN
   16     | Identifier

   17 ArgList: %empty
   18        | ArgListT

   19 ArgListT: Type Identifier
   20         | Type Identifier COMMA ArgListT

   21 StmtStar: %empty
   22         | Stmt StmtStar

   23 Stmt: LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC
   24     | SYS_OUT_PRINTLN LEFT_BRAC Expr RIGHT_BRAC SEMICOLON
   25     | Identifier EQTO Expr SEMICOLON
   26     | Identifier LEFT_SQR_BRAC Expr RIGHT_SQR_BRAC EQTO Expr SEMICOLON
   27     | IfStmt
   28     | WHILE LEFT_BRAC Expr RIGHT_BRAC Stmt
   29     | Identifier LEFT_BRAC ExprList RIGHT_BRAC SEMICOLON

   30 IfStmt: IF LEFT_BRAC Expr RIGHT_BRAC Stmt
   31       | IF LEFT_BRAC Expr RIGHT_BRAC Stmt ELSE Stmt

   32 ExprList: %empty
   33         | ExprListT

   34 ExprListT: Expr
   35          | Expr COMMA ExprListT

   36 Expr: PE AND PE
   37     | PE OR PE
   38     | PE NOTEQ PE
   39     | PE LTE PE
   40     | PE ADD PE
   41     | PE SUB PE
   42     | PE MUL PE
   43     | PE DIV PE
   44     | PE LEFT_SQR_BRAC PE RIGHT_SQR_BRAC
   45     | PE DOT LENGTH
   46     | PE
   47     | PE DOT Identifier LEFT_BRAC ExprList RIGHT_BRAC
   48     | Identifier LEFT_BRAC ExprList RIGHT_BRAC

   49 PE: PES
   50   | NEW INT LEFT_SQR_BRAC Expr RIGHT_SQR_BRAC
   51   | NEW Identifier LEFT_BRAC RIGHT_BRAC
   52   | NOT Expr
   53   | LEFT_BRAC Expr RIGHT_BRAC

   54 PES: Number
   55    | TRUE
   56    | FALSE
   57    | Identifier
   58    | THIS

   59 MacroDefStar: %empty
   60             | MacroDef MacroDefStar

   61 MacroDef: MacroDefExpr
   62         | MacroDefStmt

   63 MacroDefStmt: DEFSTMT Identifier LEFT_BRAC Identifier COMMA Identifier COMMA Identifier CommaIdStar RIGHT_BRAC LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC
   64             | DEFSTMT0 Identifier LEFT_BRAC RIGHT_BRAC LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC
   65             | DEFSTMT1 Identifier LEFT_BRAC Identifier RIGHT_BRAC LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC
   66             | DEFSTMT2 Identifier LEFT_BRAC Identifier COMMA Identifier RIGHT_BRAC LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC

   67 MacroDefExpr: DEFEXPR Identifier LEFT_BRAC Identifier COMMA Identifier COMMA Identifier CommaIdStar RIGHT_BRAC LEFT_BRAC Expr RIGHT_BRAC
   68             | DEFEXPR0 Identifier LEFT_BRAC RIGHT_BRAC LEFT_BRAC Expr RIGHT_BRAC
   69             | DEFEXPR1 Identifier LEFT_BRAC Identifier RIGHT_BRAC LEFT_BRAC Expr RIGHT_BRAC
   70             | DEFEXPR2 Identifier LEFT_BRAC Identifier COMMA Identifier RIGHT_BRAC LEFT_BRAC Expr RIGHT_BRAC

   71 CommaIdStar: %empty
   72            | COMMA Identifier CommaIdStar

   73 Number: NUMBER

   74 Identifier: ID


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    CLASS (258) 2 5 6
    PUBLIC (259) 2 9
    STATIC (260) 2
    VOID (261) 2
    MAIN (262) 2
    RETURN (263) 9
    SYS_OUT_PRINTLN (264) 2 24
    EXTENDS (265) 6
    INT_ARRAY (266) 13
    INT (267) 12 14 50
    BOOLEAN (268) 15
    STRING (269) 2
    TRUE (270) 55
    FALSE (271) 56
    THIS (272) 58
    NEW (273) 50 51
    IF (274) 30 31
    ELSE (275) 31
    WHILE (276) 28
    NOT (277) 52
    EQTO (278) 25 26
    LEFT_BRAC (279) 2 9 24 28 29 30 31 47 48 51 53 63 64 65 66 67 68 69 70
    RIGHT_BRAC (280) 2 9 24 28 29 30 31 47 48 51 53 63 64 65 66 67 68 69 70
    LEFT_CURL_BRAC (281) 2 5 6 9 23 63 64 65 66
    RIGHT_CURL_BRAC (282) 2 5 6 9 23 63 64 65 66
    LEFT_SQR_BRAC (283) 2 14 26 44 50
    RIGHT_SQR_BRAC (284) 2 14 26 44 50
    DEFEXPR0 (285) 68
    DEFEXPR1 (286) 69
    DEFEXPR2 (287) 70
    DEFEXPR (288) 67
    DEFSTMT0 (289) 64
    DEFSTMT1 (290) 65
    DEFSTMT2 (291) 66
    DEFSTMT (292) 63
    SEMICOLON (293) 2 9 11 24 25 26 29
    NUMBER <name> (294) 73
    ID <name> (295) 74
    COMMA (296) 20 35 63 66 67 70 72
    LENGTH (297) 45
    NO_PE (298)
    AND (299) 36
    OR (300) 37
    LTE (301) 39
    NOTEQ (302) 38
    ADD (303) 40
    SUB (304) 41
    MUL (305) 42
    DIV (306) 43
    DOT (307) 45 47
    NO_ELSE (308)


Nonterminals, with rules where they appear

    $accept (54)
        on left: 0
    goal <genList> (55)
        on left: 1
        on right: 0
    MainClass <genList> (56)
        on left: 2
        on right: 1
    TypeDecStar <genList> (57)
        on left: 3 4
        on right: 1 4
    TypeDec <genList> (58)
        on left: 5 6
        on right: 4
    MethodStar <genList> (59)
        on left: 7 8
        on right: 5 6 8
    MethodDec <genList> (60)
        on left: 9
        on right: 8
    TypeIdStar <genList> (61)
        on left: 10 11
        on right: 2 5 6 9 11
    Type <name> (62)
        on left: 12 13 14 15 16
        on right: 9 11 19 20
    ArgList <genList> (63)
        on left: 17 18
        on right: 9
    ArgListT <genList> (64)
        on left: 19 20
        on right: 18 20
    StmtStar <genList> (65)
        on left: 21 22
        on right: 9 22 23 63 64 65 66
    Stmt <genList> (66)
        on left: 23 24 25 26 27 28 29
        on right: 22 28 30 31
    IfStmt <genList> (67)
        on left: 30 31
        on right: 27
    ExprList <genList> (68)
        on left: 32 33
        on right: 29 47 48
    ExprListT <genList> (69)
        on left: 34 35
        on right: 33 35
    Expr <genList> (70)
        on left: 36 37 38 39 40 41 42 43 44 45 46 47 48
        on right: 2 9 24 25 26 28 30 31 34 35 50 52 53 67 68 69 70
    PE <genList> (71)
        on left: 49 50 51 52 53
        on right: 36 37 38 39 40 41 42 43 44 45 46 47
    PES <genList> (72)
        on left: 54 55 56 57 58
        on right: 49
    MacroDefStar <genList> (73)
        on left: 59 60
        on right: 1 60
    MacroDef <genList> (74)
        on left: 61 62
        on right: 60
    MacroDefStmt <genList> (75)
        on left: 63 64 65 66
        on right: 62
    MacroDefExpr <genList> (76)
        on left: 67 68 69 70
        on right: 61
    CommaIdStar <genList> (77)
        on left: 71 72
        on right: 63 67 72
    Number <name> (78)
        on left: 73
        on right: 54
    Identifier <name> (79)
        on left: 74
        on right: 2 5 6 9 11 16 19 20 25 26 29 47 48 51 57 63 64 65 66 67 68 69 70 72


State 0

    0 $accept: . goal $end

    DEFEXPR0  shift, and go to state 1
    DEFEXPR1  shift, and go to state 2
    DEFEXPR2  shift, and go to state 3
    DEFEXPR   shift, and go to state 4
    DEFSTMT0  shift, and go to state 5
    DEFSTMT1  shift, and go to state 6
    DEFSTMT2  shift, and go to state 7
    DEFSTMT   shift, and go to state 8

    $default  reduce using rule 59 (MacroDefStar)

    goal          go to state 9
    MacroDefStar  go to state 10
    MacroDef      go to state 11
    MacroDefStmt  go to state 12
    MacroDefExpr  go to state 13


State 1

   68 MacroDefExpr: DEFEXPR0 . Identifier LEFT_BRAC RIGHT_BRAC LEFT_BRAC Expr RIGHT_BRAC

    ID  shift, and go to state 14

    Identifier  go to state 15


State 2

   69 MacroDefExpr: DEFEXPR1 . Identifier LEFT_BRAC Identifier RIGHT_BRAC LEFT_BRAC Expr RIGHT_BRAC

    ID  shift, and go to state 14

    Identifier  go to state 16


State 3

   70 MacroDefExpr: DEFEXPR2 . Identifier LEFT_BRAC Identifier COMMA Identifier RIGHT_BRAC LEFT_BRAC Expr RIGHT_BRAC

    ID  shift, and go to state 14

    Identifier  go to state 17


State 4

   67 MacroDefExpr: DEFEXPR . Identifier LEFT_BRAC Identifier COMMA Identifier COMMA Identifier CommaIdStar RIGHT_BRAC LEFT_BRAC Expr RIGHT_BRAC

    ID  shift, and go to state 14

    Identifier  go to state 18


State 5

   64 MacroDefStmt: DEFSTMT0 . Identifier LEFT_BRAC RIGHT_BRAC LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC

    ID  shift, and go to state 14

    Identifier  go to state 19


State 6

   65 MacroDefStmt: DEFSTMT1 . Identifier LEFT_BRAC Identifier RIGHT_BRAC LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC

    ID  shift, and go to state 14

    Identifier  go to state 20


State 7

   66 MacroDefStmt: DEFSTMT2 . Identifier LEFT_BRAC Identifier COMMA Identifier RIGHT_BRAC LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC

    ID  shift, and go to state 14

    Identifier  go to state 21


State 8

   63 MacroDefStmt: DEFSTMT . Identifier LEFT_BRAC Identifier COMMA Identifier COMMA Identifier CommaIdStar RIGHT_BRAC LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC

    ID  shift, and go to state 14

    Identifier  go to state 22


State 9

    0 $accept: goal . $end

    $end  shift, and go to state 23


State 10

    1 goal: MacroDefStar . MainClass TypeDecStar

    CLASS  shift, and go to state 24

    MainClass  go to state 25


State 11

   60 MacroDefStar: MacroDef . MacroDefStar

    DEFEXPR0  shift, and go to state 1
    DEFEXPR1  shift, and go to state 2
    DEFEXPR2  shift, and go to state 3
    DEFEXPR   shift, and go to state 4
    DEFSTMT0  shift, and go to state 5
    DEFSTMT1  shift, and go to state 6
    DEFSTMT2  shift, and go to state 7
    DEFSTMT   shift, and go to state 8

    $default  reduce using rule 59 (MacroDefStar)

    MacroDefStar  go to state 26
    MacroDef      go to state 11
    MacroDefStmt  go to state 12
    MacroDefExpr  go to state 13


State 12

   62 MacroDef: MacroDefStmt .

    $default  reduce using rule 62 (MacroDef)


State 13

   61 MacroDef: MacroDefExpr .

    $default  reduce using rule 61 (MacroDef)


State 14

   74 Identifier: ID .

    $default  reduce using rule 74 (Identifier)


State 15

   68 MacroDefExpr: DEFEXPR0 Identifier . LEFT_BRAC RIGHT_BRAC LEFT_BRAC Expr RIGHT_BRAC

    LEFT_BRAC  shift, and go to state 27


State 16

   69 MacroDefExpr: DEFEXPR1 Identifier . LEFT_BRAC Identifier RIGHT_BRAC LEFT_BRAC Expr RIGHT_BRAC

    LEFT_BRAC  shift, and go to state 28


State 17

   70 MacroDefExpr: DEFEXPR2 Identifier . LEFT_BRAC Identifier COMMA Identifier RIGHT_BRAC LEFT_BRAC Expr RIGHT_BRAC

    LEFT_BRAC  shift, and go to state 29


State 18

   67 MacroDefExpr: DEFEXPR Identifier . LEFT_BRAC Identifier COMMA Identifier COMMA Identifier CommaIdStar RIGHT_BRAC LEFT_BRAC Expr RIGHT_BRAC

    LEFT_BRAC  shift, and go to state 30


State 19

   64 MacroDefStmt: DEFSTMT0 Identifier . LEFT_BRAC RIGHT_BRAC LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC

    LEFT_BRAC  shift, and go to state 31


State 20

   65 MacroDefStmt: DEFSTMT1 Identifier . LEFT_BRAC Identifier RIGHT_BRAC LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC

    LEFT_BRAC  shift, and go to state 32


State 21

   66 MacroDefStmt: DEFSTMT2 Identifier . LEFT_BRAC Identifier COMMA Identifier RIGHT_BRAC LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC

    LEFT_BRAC  shift, and go to state 33


State 22

   63 MacroDefStmt: DEFSTMT Identifier . LEFT_BRAC Identifier COMMA Identifier COMMA Identifier CommaIdStar RIGHT_BRAC LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC

    LEFT_BRAC  shift, and go to state 34


State 23

    0 $accept: goal $end .

    $default  accept


State 24

    2 MainClass: CLASS . Identifier LEFT_CURL_BRAC TypeIdStar PUBLIC STATIC VOID MAIN LEFT_BRAC STRING LEFT_SQR_BRAC RIGHT_SQR_BRAC Identifier RIGHT_BRAC LEFT_CURL_BRAC SYS_OUT_PRINTLN LEFT_BRAC Expr RIGHT_BRAC SEMICOLON RIGHT_CURL_BRAC RIGHT_CURL_BRAC

    ID  shift, and go to state 14

    Identifier  go to state 35


State 25

    1 goal: MacroDefStar MainClass . TypeDecStar

    CLASS  shift, and go to state 36

    $default  reduce using rule 3 (TypeDecStar)

    TypeDecStar  go to state 37
    TypeDec      go to state 38


State 26

   60 MacroDefStar: MacroDef MacroDefStar .

    $default  reduce using rule 60 (MacroDefStar)


State 27

   68 MacroDefExpr: DEFEXPR0 Identifier LEFT_BRAC . RIGHT_BRAC LEFT_BRAC Expr RIGHT_BRAC

    RIGHT_BRAC  shift, and go to state 39


State 28

   69 MacroDefExpr: DEFEXPR1 Identifier LEFT_BRAC . Identifier RIGHT_BRAC LEFT_BRAC Expr RIGHT_BRAC

    ID  shift, and go to state 14

    Identifier  go to state 40


State 29

   70 MacroDefExpr: DEFEXPR2 Identifier LEFT_BRAC . Identifier COMMA Identifier RIGHT_BRAC LEFT_BRAC Expr RIGHT_BRAC

    ID  shift, and go to state 14

    Identifier  go to state 41


State 30

   67 MacroDefExpr: DEFEXPR Identifier LEFT_BRAC . Identifier COMMA Identifier COMMA Identifier CommaIdStar RIGHT_BRAC LEFT_BRAC Expr RIGHT_BRAC

    ID  shift, and go to state 14

    Identifier  go to state 42


State 31

   64 MacroDefStmt: DEFSTMT0 Identifier LEFT_BRAC . RIGHT_BRAC LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC

    RIGHT_BRAC  shift, and go to state 43


State 32

   65 MacroDefStmt: DEFSTMT1 Identifier LEFT_BRAC . Identifier RIGHT_BRAC LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC

    ID  shift, and go to state 14

    Identifier  go to state 44


State 33

   66 MacroDefStmt: DEFSTMT2 Identifier LEFT_BRAC . Identifier COMMA Identifier RIGHT_BRAC LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC

    ID  shift, and go to state 14

    Identifier  go to state 45


State 34

   63 MacroDefStmt: DEFSTMT Identifier LEFT_BRAC . Identifier COMMA Identifier COMMA Identifier CommaIdStar RIGHT_BRAC LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC

    ID  shift, and go to state 14

    Identifier  go to state 46


State 35

    2 MainClass: CLASS Identifier . LEFT_CURL_BRAC TypeIdStar PUBLIC STATIC VOID MAIN LEFT_BRAC STRING LEFT_SQR_BRAC RIGHT_SQR_BRAC Identifier RIGHT_BRAC LEFT_CURL_BRAC SYS_OUT_PRINTLN LEFT_BRAC Expr RIGHT_BRAC SEMICOLON RIGHT_CURL_BRAC RIGHT_CURL_BRAC

    LEFT_CURL_BRAC  shift, and go to state 47


State 36

    5 TypeDec: CLASS . Identifier LEFT_CURL_BRAC TypeIdStar MethodStar RIGHT_CURL_BRAC
    6        | CLASS . Identifier EXTENDS Identifier LEFT_CURL_BRAC TypeIdStar MethodStar RIGHT_CURL_BRAC

    ID  shift, and go to state 14

    Identifier  go to state 48


State 37

    1 goal: MacroDefStar MainClass TypeDecStar .

    $default  reduce using rule 1 (goal)


State 38

    4 TypeDecStar: TypeDec . TypeDecStar

    CLASS  shift, and go to state 36

    $default  reduce using rule 3 (TypeDecStar)

    TypeDecStar  go to state 49
    TypeDec      go to state 38


State 39

   68 MacroDefExpr: DEFEXPR0 Identifier LEFT_BRAC RIGHT_BRAC . LEFT_BRAC Expr RIGHT_BRAC

    LEFT_BRAC  shift, and go to state 50


State 40

   69 MacroDefExpr: DEFEXPR1 Identifier LEFT_BRAC Identifier . RIGHT_BRAC LEFT_BRAC Expr RIGHT_BRAC

    RIGHT_BRAC  shift, and go to state 51


State 41

   70 MacroDefExpr: DEFEXPR2 Identifier LEFT_BRAC Identifier . COMMA Identifier RIGHT_BRAC LEFT_BRAC Expr RIGHT_BRAC

    COMMA  shift, and go to state 52


State 42

   67 MacroDefExpr: DEFEXPR Identifier LEFT_BRAC Identifier . COMMA Identifier COMMA Identifier CommaIdStar RIGHT_BRAC LEFT_BRAC Expr RIGHT_BRAC

    COMMA  shift, and go to state 53


State 43

   64 MacroDefStmt: DEFSTMT0 Identifier LEFT_BRAC RIGHT_BRAC . LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC

    LEFT_CURL_BRAC  shift, and go to state 54


State 44

   65 MacroDefStmt: DEFSTMT1 Identifier LEFT_BRAC Identifier . RIGHT_BRAC LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC

    RIGHT_BRAC  shift, and go to state 55


State 45

   66 MacroDefStmt: DEFSTMT2 Identifier LEFT_BRAC Identifier . COMMA Identifier RIGHT_BRAC LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC

    COMMA  shift, and go to state 56


State 46

   63 MacroDefStmt: DEFSTMT Identifier LEFT_BRAC Identifier . COMMA Identifier COMMA Identifier CommaIdStar RIGHT_BRAC LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC

    COMMA  shift, and go to state 57


State 47

    2 MainClass: CLASS Identifier LEFT_CURL_BRAC . TypeIdStar PUBLIC STATIC VOID MAIN LEFT_BRAC STRING LEFT_SQR_BRAC RIGHT_SQR_BRAC Identifier RIGHT_BRAC LEFT_CURL_BRAC SYS_OUT_PRINTLN LEFT_BRAC Expr RIGHT_BRAC SEMICOLON RIGHT_CURL_BRAC RIGHT_CURL_BRAC

    $default  reduce using rule 10 (TypeIdStar)

    TypeIdStar  go to state 58


State 48

    5 TypeDec: CLASS Identifier . LEFT_CURL_BRAC TypeIdStar MethodStar RIGHT_CURL_BRAC
    6        | CLASS Identifier . EXTENDS Identifier LEFT_CURL_BRAC TypeIdStar MethodStar RIGHT_CURL_BRAC

    EXTENDS         shift, and go to state 59
    LEFT_CURL_BRAC  shift, and go to state 60


State 49

    4 TypeDecStar: TypeDec TypeDecStar .

    $default  reduce using rule 4 (TypeDecStar)


State 50

   68 MacroDefExpr: DEFEXPR0 Identifier LEFT_BRAC RIGHT_BRAC LEFT_BRAC . Expr RIGHT_BRAC

    TRUE       shift, and go to state 61
    FALSE      shift, and go to state 62
    THIS       shift, and go to state 63
    NEW        shift, and go to state 64
    NOT        shift, and go to state 65
    LEFT_BRAC  shift, and go to state 66
    NUMBER     shift, and go to state 67
    ID         shift, and go to state 14

    Expr        go to state 68
    PE          go to state 69
    PES         go to state 70
    Number      go to state 71
    Identifier  go to state 72


State 51

   69 MacroDefExpr: DEFEXPR1 Identifier LEFT_BRAC Identifier RIGHT_BRAC . LEFT_BRAC Expr RIGHT_BRAC

    LEFT_BRAC  shift, and go to state 73


State 52

   70 MacroDefExpr: DEFEXPR2 Identifier LEFT_BRAC Identifier COMMA . Identifier RIGHT_BRAC LEFT_BRAC Expr RIGHT_BRAC

    ID  shift, and go to state 14

    Identifier  go to state 74


State 53

   67 MacroDefExpr: DEFEXPR Identifier LEFT_BRAC Identifier COMMA . Identifier COMMA Identifier CommaIdStar RIGHT_BRAC LEFT_BRAC Expr RIGHT_BRAC

    ID  shift, and go to state 14

    Identifier  go to state 75


State 54

   64 MacroDefStmt: DEFSTMT0 Identifier LEFT_BRAC RIGHT_BRAC LEFT_CURL_BRAC . StmtStar RIGHT_CURL_BRAC

    SYS_OUT_PRINTLN  shift, and go to state 76
    IF               shift, and go to state 77
    WHILE            shift, and go to state 78
    LEFT_CURL_BRAC   shift, and go to state 79
    ID               shift, and go to state 14

    $default  reduce using rule 21 (StmtStar)

    StmtStar    go to state 80
    Stmt        go to state 81
    IfStmt      go to state 82
    Identifier  go to state 83


State 55

   65 MacroDefStmt: DEFSTMT1 Identifier LEFT_BRAC Identifier RIGHT_BRAC . LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC

    LEFT_CURL_BRAC  shift, and go to state 84


State 56

   66 MacroDefStmt: DEFSTMT2 Identifier LEFT_BRAC Identifier COMMA . Identifier RIGHT_BRAC LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC

    ID  shift, and go to state 14

    Identifier  go to state 85


State 57

   63 MacroDefStmt: DEFSTMT Identifier LEFT_BRAC Identifier COMMA . Identifier COMMA Identifier CommaIdStar RIGHT_BRAC LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC

    ID  shift, and go to state 14

    Identifier  go to state 86


State 58

    2 MainClass: CLASS Identifier LEFT_CURL_BRAC TypeIdStar . PUBLIC STATIC VOID MAIN LEFT_BRAC STRING LEFT_SQR_BRAC RIGHT_SQR_BRAC Identifier RIGHT_BRAC LEFT_CURL_BRAC SYS_OUT_PRINTLN LEFT_BRAC Expr RIGHT_BRAC SEMICOLON RIGHT_CURL_BRAC RIGHT_CURL_BRAC
   11 TypeIdStar: TypeIdStar . Type Identifier SEMICOLON

    PUBLIC     shift, and go to state 87
    INT_ARRAY  shift, and go to state 88
    INT        shift, and go to state 89
    BOOLEAN    shift, and go to state 90
    ID         shift, and go to state 14

    Type        go to state 91
    Identifier  go to state 92


State 59

    6 TypeDec: CLASS Identifier EXTENDS . Identifier LEFT_CURL_BRAC TypeIdStar MethodStar RIGHT_CURL_BRAC

    ID  shift, and go to state 14

    Identifier  go to state 93


State 60

    5 TypeDec: CLASS Identifier LEFT_CURL_BRAC . TypeIdStar MethodStar RIGHT_CURL_BRAC

    $default  reduce using rule 10 (TypeIdStar)

    TypeIdStar  go to state 94


State 61

   55 PES: TRUE .

    $default  reduce using rule 55 (PES)


State 62

   56 PES: FALSE .

    $default  reduce using rule 56 (PES)


State 63

   58 PES: THIS .

    $default  reduce using rule 58 (PES)


State 64

   50 PE: NEW . INT LEFT_SQR_BRAC Expr RIGHT_SQR_BRAC
   51   | NEW . Identifier LEFT_BRAC RIGHT_BRAC

    INT  shift, and go to state 95
    ID   shift, and go to state 14

    Identifier  go to state 96


State 65

   52 PE: NOT . Expr

    TRUE       shift, and go to state 61
    FALSE      shift, and go to state 62
    THIS       shift, and go to state 63
    NEW        shift, and go to state 64
    NOT        shift, and go to state 65
    LEFT_BRAC  shift, and go to state 66
    NUMBER     shift, and go to state 67
    ID         shift, and go to state 14

    Expr        go to state 97
    PE          go to state 69
    PES         go to state 70
    Number      go to state 71
    Identifier  go to state 72


State 66

   53 PE: LEFT_BRAC . Expr RIGHT_BRAC

    TRUE       shift, and go to state 61
    FALSE      shift, and go to state 62
    THIS       shift, and go to state 63
    NEW        shift, and go to state 64
    NOT        shift, and go to state 65
    LEFT_BRAC  shift, and go to state 66
    NUMBER     shift, and go to state 67
    ID         shift, and go to state 14

    Expr        go to state 98
    PE          go to state 69
    PES         go to state 70
    Number      go to state 71
    Identifier  go to state 72


State 67

   73 Number: NUMBER .

    $default  reduce using rule 73 (Number)


State 68

   68 MacroDefExpr: DEFEXPR0 Identifier LEFT_BRAC RIGHT_BRAC LEFT_BRAC Expr . RIGHT_BRAC

    RIGHT_BRAC  shift, and go to state 99


State 69

   36 Expr: PE . AND PE
   37     | PE . OR PE
   38     | PE . NOTEQ PE
   39     | PE . LTE PE
   40     | PE . ADD PE
   41     | PE . SUB PE
   42     | PE . MUL PE
   43     | PE . DIV PE
   44     | PE . LEFT_SQR_BRAC PE RIGHT_SQR_BRAC
   45     | PE . DOT LENGTH
   46     | PE .
   47     | PE . DOT Identifier LEFT_BRAC ExprList RIGHT_BRAC

    LEFT_SQR_BRAC  shift, and go to state 100
    AND            shift, and go to state 101
    OR             shift, and go to state 102
    LTE            shift, and go to state 103
    NOTEQ          shift, and go to state 104
    ADD            shift, and go to state 105
    SUB            shift, and go to state 106
    MUL            shift, and go to state 107
    DIV            shift, and go to state 108
    DOT            shift, and go to state 109

    $default  reduce using rule 46 (Expr)


State 70

   49 PE: PES .

    $default  reduce using rule 49 (PE)


State 71

   54 PES: Number .

    $default  reduce using rule 54 (PES)


State 72

   48 Expr: Identifier . LEFT_BRAC ExprList RIGHT_BRAC
   57 PES: Identifier .

    LEFT_BRAC  shift, and go to state 110

    $default  reduce using rule 57 (PES)


State 73

   69 MacroDefExpr: DEFEXPR1 Identifier LEFT_BRAC Identifier RIGHT_BRAC LEFT_BRAC . Expr RIGHT_BRAC

    TRUE       shift, and go to state 61
    FALSE      shift, and go to state 62
    THIS       shift, and go to state 63
    NEW        shift, and go to state 64
    NOT        shift, and go to state 65
    LEFT_BRAC  shift, and go to state 66
    NUMBER     shift, and go to state 67
    ID         shift, and go to state 14

    Expr        go to state 111
    PE          go to state 69
    PES         go to state 70
    Number      go to state 71
    Identifier  go to state 72


State 74

   70 MacroDefExpr: DEFEXPR2 Identifier LEFT_BRAC Identifier COMMA Identifier . RIGHT_BRAC LEFT_BRAC Expr RIGHT_BRAC

    RIGHT_BRAC  shift, and go to state 112


State 75

   67 MacroDefExpr: DEFEXPR Identifier LEFT_BRAC Identifier COMMA Identifier . COMMA Identifier CommaIdStar RIGHT_BRAC LEFT_BRAC Expr RIGHT_BRAC

    COMMA  shift, and go to state 113


State 76

   24 Stmt: SYS_OUT_PRINTLN . LEFT_BRAC Expr RIGHT_BRAC SEMICOLON

    LEFT_BRAC  shift, and go to state 114


State 77

   30 IfStmt: IF . LEFT_BRAC Expr RIGHT_BRAC Stmt
   31       | IF . LEFT_BRAC Expr RIGHT_BRAC Stmt ELSE Stmt

    LEFT_BRAC  shift, and go to state 115


State 78

   28 Stmt: WHILE . LEFT_BRAC Expr RIGHT_BRAC Stmt

    LEFT_BRAC  shift, and go to state 116


State 79

   23 Stmt: LEFT_CURL_BRAC . StmtStar RIGHT_CURL_BRAC

    SYS_OUT_PRINTLN  shift, and go to state 76
    IF               shift, and go to state 77
    WHILE            shift, and go to state 78
    LEFT_CURL_BRAC   shift, and go to state 79
    ID               shift, and go to state 14

    $default  reduce using rule 21 (StmtStar)

    StmtStar    go to state 117
    Stmt        go to state 81
    IfStmt      go to state 82
    Identifier  go to state 83


State 80

   64 MacroDefStmt: DEFSTMT0 Identifier LEFT_BRAC RIGHT_BRAC LEFT_CURL_BRAC StmtStar . RIGHT_CURL_BRAC

    RIGHT_CURL_BRAC  shift, and go to state 118


State 81

   22 StmtStar: Stmt . StmtStar

    SYS_OUT_PRINTLN  shift, and go to state 76
    IF               shift, and go to state 77
    WHILE            shift, and go to state 78
    LEFT_CURL_BRAC   shift, and go to state 79
    ID               shift, and go to state 14

    $default  reduce using rule 21 (StmtStar)

    StmtStar    go to state 119
    Stmt        go to state 81
    IfStmt      go to state 82
    Identifier  go to state 83


State 82

   27 Stmt: IfStmt .

    $default  reduce using rule 27 (Stmt)


State 83

   25 Stmt: Identifier . EQTO Expr SEMICOLON
   26     | Identifier . LEFT_SQR_BRAC Expr RIGHT_SQR_BRAC EQTO Expr SEMICOLON
   29     | Identifier . LEFT_BRAC ExprList RIGHT_BRAC SEMICOLON

    EQTO           shift, and go to state 120
    LEFT_BRAC      shift, and go to state 121
    LEFT_SQR_BRAC  shift, and go to state 122


State 84

   65 MacroDefStmt: DEFSTMT1 Identifier LEFT_BRAC Identifier RIGHT_BRAC LEFT_CURL_BRAC . StmtStar RIGHT_CURL_BRAC

    SYS_OUT_PRINTLN  shift, and go to state 76
    IF               shift, and go to state 77
    WHILE            shift, and go to state 78
    LEFT_CURL_BRAC   shift, and go to state 79
    ID               shift, and go to state 14

    $default  reduce using rule 21 (StmtStar)

    StmtStar    go to state 123
    Stmt        go to state 81
    IfStmt      go to state 82
    Identifier  go to state 83


State 85

   66 MacroDefStmt: DEFSTMT2 Identifier LEFT_BRAC Identifier COMMA Identifier . RIGHT_BRAC LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC

    RIGHT_BRAC  shift, and go to state 124


State 86

   63 MacroDefStmt: DEFSTMT Identifier LEFT_BRAC Identifier COMMA Identifier . COMMA Identifier CommaIdStar RIGHT_BRAC LEFT_CURL_BRAC StmtStar RIGHT_CURL_BRAC

    COMMA  shift, and go to state 125


State 87
